        !cp foo bar
    is translated to:
        SYSTEM "cp foo bar"
    Note that !cd is treated as a special case, e.g.
        !cd foo
    is translated to:
        CHDIR "foo"
    This is required because "!cd foo" would otherwise appear to do nothing
    because each SYSTEM command is run in the context of a separate forked
    process instead of the MMBasic process itself.
  - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
    extension is not provided then one is automatically appended.
      - unlike other MMBasic ports MMB4L has a case-sensitive file-system
        and expects MMBasic program files to have one of three possible
        extensions: .bas, .BAS, or .Bas.
      - if no extension is specified then MMB4L will check for the existence
        of a file with each extension in order, if no such file is found then
        it assumes the .bas extension.
  - Changed assignment of values to MM.ERRNO, they are now:
           0      : no error.
       1  ..  255 : standard error numbers (errno) for C library calls.
          256     : unclassified MMBasic error.
      257 .. 1023 : reserved for specific MMBasic errors.
         1024+    : reserved for program specific errors.
    Error codes from the SYSTEM command are an exception to this rule; if
    SYSTEM fails then MM.ERRNO is set equal to the executed program's
    exit code.

Version 2022.01.00-a3 - 16-Jan-2022:
  - Added serial port support, e.g.
        OPEN "/dev/ttyS0: 115200" As #1
    this is very preliminary and in need of extensive user testing,
    see README for details.
  - Added XMODEM {SEND|RECEIVE} file$, #fnbr command:
    - #fnbr must first have been OPENed as a serial port.
    - unlike other MMBasic versions, MMB4L cannot use XMODEM to send to or
      receive from the console.
  - Added OPTION CODEPAGE page$ command:
    - causes character bytes in the range 128-255 to be translated to Unicode