@@ -39,6 +39,11 @@ Version 2022.01.00-a4 - ??-???-2022:
     This is required because "!cd foo" would otherwise appear to do nothing
     because each SYSTEM command is run in the context of a separate forked
     process instead of the MMBasic process itself.
+  - Added SYSTEM sub-commands for getting and setting environment variables:
+    - SYSTEM GETENV name$, {value$ | value%()}
+    - SYSTEM SETENV name$, {value$ | value%()}
+    This supplements MM.INFO$(ENVVAR) because it allows values > 255 characters
+    to be read into a LONGSTRING.
   - Changed LOAD and RUN so that if a filename without a [.bas|.BAS|.Bas]
     extension is not provided then one is automatically appended.
       - unlike other MMBasic ports MMB4L has a case-sensitive file-system
